syntax="proto3";
package file;

option go_package="file/";

message RequestBody{
    int32 x=1;
}

message ResponseBody{
    int32 x=1;
}

service MyStreamingService {
    rpc StreamData(RequestBody) returns (stream ResponseBody) {}
}